...
            Row(
                modifier = Modifier.fillMaxWidth(),
                horizontalArrangement = Arrangement.Center,
            ) {
                Text(
                    text = stringResource(Res.string.no_streaming_items),
                    modifier = Modifier.testTag("StreamListScreenEmptyText")
                )
            }
        }
    } else if (isSorting) {
        ReorderItemList(
            modifier = modifier,
...
                    text = { Text(stringResource(Res.string.add_rtsp_button)) },
                    leadingIcon = { Icon(Icons.Default.Add, null) },
                    onClick = {
                        isOptionOpening = MoreOptionState.CLOSED
                        screenActions.onAddItemSelected()
                    },
                    modifier = Modifier.testTag("AddButton")
                )
                DropdownMenuItem(
                    text = { Text(stringResource(Res.string.sort_rtsp_button)) },
                    leadingIcon = { Icon(Icons.AutoMirrored.Filled.Sort, null) },
                    onClick = {
                        isOptionOpening = MoreOptionState.CLOSED
                        isSorting = true
                    },
                    modifier = Modifier.testTag("SortButton")
                )
            }

            IconButton(
                onClick = {
                    if (isSorting) {
...
                    } else {
                        isOptionOpening = !isOptionOpening
                    }
                },
                colors = IconButtonDefaults.filledIconButtonColors(),
                modifier = Modifier.testTag(
                    if (isSorting) "EndSortingButton"
                    else if (isOptionOpening == MoreOptionState.OPEN) "CloseMoreButton"
                    else "MoreButton"
                )
            ) {
                val isActive = isSorting || isOptionOpening == MoreOptionState.OPEN
                Icon(
                    imageVector = if (isActive) Icons.Default.Close else Icons.Default.MoreVert,
                    contentDescription = stringResource(
...
                    style = MaterialTheme.typography.labelLarge,
                    color = textColour,
                )
            }
        }

        LazyColumn(
            modifier = Modifier
                .testTag("LazyColumn")
                .fillMaxSize(),
            verticalArrangement = Arrangement.spacedBy(PaddingM),
        ) {
            val filteredList = if (selectedTagIndex == 0) {
...
    onItemsReordered: (List<RTSPItem>) -> Unit,
) {
    Column(
        modifier = modifier.padding(vertical = PaddingM),
        verticalArrangement = Arrangement.spacedBy(PaddingM)
    ) {
        DraggableLazyColumn(
            modifier = Modifier
                .testTag("DraggableLazyColumn")
                .fillMaxSize(),
            verticalArrangement = Arrangement.spacedBy(PaddingM),
            items = itemList,
            onReordered = { reorderedList ->
...
