...
    item: RTSPItem,
    moreOption: Boolean = false,
    screenActions: StreamItemScreenActions,
    playerViewModel: RTSPVideoPlayerViewModel? = null
) {
    BoxWithConstraints(
        modifier = modifier.testTag("StreamItemScreenRoot"),
        contentAlignment = Alignment.Center
    ) {
        val isLandscape = maxWidth > maxHeight
        var showDeleteConfirmationPrompt by remember { mutableStateOf(false) }
        val rtspViewModel = playerViewModel ?: koinViewModel<RTSPVideoPlayerViewModel> {
            parametersOf(
...
                            text = { Text(stringResource(Res.string.edit)) },
                            leadingIcon = { Icon(Icons.Default.Edit, contentDescription = null) },
                            onClick = {
                                moreState = MoreOptionState.CLOSED
                                screenActions.onEditItemSelected()
                            },
                            modifier = Modifier.testTag("EditButton")
                        )
                        DropdownMenuItem(
                            text = { Text(stringResource(Res.string.delete)) },
                            leadingIcon = { Icon(Icons.Default.Delete, contentDescription = null) },
                            onClick = {
                                moreState = MoreOptionState.CLOSED
                                showDeleteConfirmationPrompt = true
                            },
                            modifier = Modifier.testTag("DeleteButton")
                        )
                    }

                    IconButton(
                        onClick = { moreState = !moreState },
                        colors = IconButtonDefaults.filledIconButtonColors(),
...
        text = { Text(text = stringResource(Res.string.delete_dialog_message)) },
        containerColor = MaterialTheme.colorScheme.background,
        onDismissRequest = onDismissRequest,
        confirmButton = {
            TextButton(
                onClick = onConfirmation,
                modifier = Modifier.testTag("DeleteConfirmButton")
            ) {
                Text(stringResource(Res.string.confirm))
            }
        },
        dismissButton = {
            TextButton(
                onClick = onDismissRequest,
                modifier = Modifier.testTag("DeleteCancelButton")
            ) {
                Text(stringResource(Res.string.cancel))
            }
        },
        modifier = Modifier.testTag("DeleteConfirmDialog")
    )
...
