...
                    color = MaterialTheme.colorScheme.onSurface,
                    modifier = Modifier.testTag("ForceTCPLabel")
                )
                Checkbox(
                    checked = fieldsValue.forceTcp,
                    onCheckedChange = { fieldsValue = fieldsValue.copy(forceTcp = it) },
                    modifier = Modifier.testTag("ForceTCPCheckbox")
                )
            }
        }

        Row(
            modifier = Modifier.fillMaxWidth(),
...
                onClick = { screenActions.onSaveItem(fieldsValue.mergeTo(item)) },
                enabled = fieldsValue.isValid,
                colors = IconButtonDefaults.iconButtonColors(
                    contentColor = MaterialTheme.colorScheme.onSurface,
                    containerColor = MaterialTheme.colorScheme.surface
                ),
                modifier = Modifier.testTag("SaveButton")
            ) {
                Icon(imageVector = Icons.Default.Save, stringResource(Res.string.save_button))
            }
        }
    }
}
...
